--- a/csi/vault/deploy-secret-provider-class.yaml
+++ b/csi/vault/deploy-secret-provider-class.yaml
@@ -2,26 +2,26 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
 metadata:
-  name: hashi-demo
-  namespace: hashi-demo
+  name: webapp-demo
+  namespace: webapp-demo
 spec:
   provider: vault
   parameters:
-    vaultAddress: http://vault.vault:8200
+    vaultAddress: http://r1-vault.hashi-vault:8200
     vaultKubernetesMountPath: eng-cluster
     roleName: webapp
     objects: |
       - objectName: POSTGRES_USER
-        secretPath: secret/data/webapp/config
-        secretKey: POSTGRES_USER
+        secretPath: webapp-demo/data/webapp/config
+        secretKey: username
       - objectName: POSTGRES_PASSWORD
-        secretPath: secret/data/webapp/config
-        secretKey: POSTGRES_PASSWORD
+        secretPath: webapp-demo/data/webapp/config
+        secretKey: password
   secretObjects:
   - data:
     - key: POSTGRES_USER
       objectName: POSTGRES_USER
     - key: POSTGRES_PASSWORD
       objectName: POSTGRES_PASSWORD
-    secretName: application
+    secretName: webapp-demo
     type: Opaque
