--- a/csi/vault/deploy-application.yaml
+++ b/csi/vault/deploy-application.yaml
@@ -2,50 +2,48 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: application
-  namespace: hashi-demo
+  name: webapp
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: application
-  namespace: hashi-demo
+  name: webapp-demo
   annotations:
-    secret.reloader.stakater.com/reload: "application"
+    secret.reloader.stakater.com/reload: "webapp-demo"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: application
+      app: webapp-demo
   template:
     metadata:
       labels:
-        app: application
+        app: webapp-demo
     spec:
       volumes:
-      - name: secrets
+      - name: webapp-demo
         csi:
           driver: secrets-store.csi.k8s.io
           readOnly: true
           volumeAttributes:
-            secretProviderClass: hashi-demo
-      serviceAccountName: application
+            secretProviderClass: webapp-demo
+      serviceAccountName: webapp
       containers:
-      - name: application
+      - name: webapp
         image: docker.io/steveszabo/webapp:289cf46
         env:
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
-              name: application
+              name: webapp-demo
               key: POSTGRES_USER
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: application
+              name: webapp-demo
               key: POSTGRES_PASSWORD
         volumeMounts:
-        - name: secrets
+        - name: webapp-demo
           mountPath: /csi/secrets
           readOnly: true
