--- a/csi/vault/deploy-secret-provider-class.yaml
+++ b/csi/vault/deploy-secret-provider-class.yaml
@@ -2,7 +2,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
 metadata:
-  name: webapp-demo
+  name: webapp-csi
 spec:
   provider: vault
   parameters:
@@ -22,5 +22,5 @@ spec:
       objectName: POSTGRES_USER
     - key: POSTGRES_PASSWORD
       objectName: POSTGRES_PASSWORD
-    secretName: webapp-demo
+    secretName: webapp-csi
     type: Opaque
