--- a/consul/hashicups/gateway/config-delete-service.json
+++ b/consul/hashicups/gateway/config-delete-service.json
@@ -1,5 +1,5 @@
 {
   "Datacenter": "dc1",
-  "Node": "datadog-node-01",
-  "ServiceID": "datadog"
+  "Node": "ubuntu",
+  "ServiceID": "example-group"
 }
