--- a/argocd/vendor.install-core.yaml
+++ b/argocd/vendor.install-core.yaml
@@ -9530,7 +9530,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: argocd-application-controller
-  namespace: argocd
+  namespace: tools-argocd
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -9547,7 +9547,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: argocd-server
-  namespace: argocd
+  namespace: tools-argocd
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -9886,7 +9886,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /shared/argocd-dex
-        image: quay.io/argoproj/argocd:v2.3.3
+        image: quay.io/argoproj/argocd:v2.3.4
         imagePullPolicy: Always
         name: copyutil
         volumeMounts:
@@ -9919,7 +9919,7 @@ spec:
       containers:
       - command:
         - argocd-notifications
-        image: quay.io/argoproj/argocd:v2.3.3
+        image: quay.io/argoproj/argocd:v2.3.4
         imagePullPolicy: Always
         livenessProbe:
           tcpSocket:
@@ -10116,7 +10116,7 @@ spec:
           value: /helm-working-dir
         - name: HELM_DATA_HOME
           value: /helm-working-dir
-        image: quay.io/argoproj/argocd:v2.3.3
+        image: quay.io/argoproj/argocd:v2.3.4
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
@@ -10165,7 +10165,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: quay.io/argoproj/argocd:v2.3.3
+        image: quay.io/argoproj/argocd:v2.3.4
         name: copyutil
         volumeMounts:
         - mountPath: /var/run/argocd
@@ -10388,7 +10388,7 @@ spec:
               key: server.http.cookie.maxnumber
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.3.3
+        image: quay.io/argoproj/argocd:v2.3.4
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -10578,7 +10578,7 @@ spec:
               key: controller.default.cache.expiration
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.3.3
+        image: quay.io/argoproj/argocd:v2.3.4
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
