--- a/argocd/vendor.install-image-updater.yaml
+++ b/argocd/vendor.install-image-updater.yaml
@@ -66,6 +66,14 @@ metadata:
   name: argocd-image-updater-config
 ---
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  labels:
+    app.kubernetes.io/name: argocd-image-updater-ssh-config
+    app.kubernetes.io/part-of: argocd-image-updater
+  name: argocd-image-updater-ssh-config
+---
+apiVersion: v1
 kind: Secret
 metadata:
   labels:
@@ -85,6 +93,8 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: argocd-image-updater
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -157,7 +167,7 @@ spec:
               key: kube.events
               name: argocd-image-updater-config
               optional: true
-        image: argoprojlabs/argocd-image-updater:v0.10.3
+        image: quay.io/argoprojlabs/argocd-image-updater:v0.12.0
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -179,6 +189,8 @@ spec:
           name: image-updater-conf
         - mountPath: /app/config/ssh
           name: ssh-known-hosts
+        - mountPath: /app/.ssh
+          name: ssh-config
       serviceAccountName: argocd-image-updater
       volumes:
       - configMap:
@@ -194,3 +206,7 @@ spec:
           name: argocd-ssh-known-hosts-cm
           optional: true
         name: ssh-known-hosts
+      - configMap:
+          name: argocd-image-updater-ssh-config
+          optional: true
+        name: ssh-config
