--- a/argocd/argo-project-eng.yaml
+++ b/argocd/argo-project-eng.yaml
@@ -2,8 +2,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
+  name: boot
+  namespace: tools-argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+spec:
+  description: ArgoCD bootstrap project
+  sourceRepos:
+  - https://github.com/stevegszabo/argocd-example-apps.git
+  destinations:
+  - server: https://192.168.56.201:6443
+    namespace: tools-argocd
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
   name: webapp-demo
-  namespace: argocd
+  namespace: tools-argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
@@ -13,19 +29,3 @@ spec:
   destinations:
   - server: https://192.168.56.201:6443
     namespace: webapp-demo
-
----
-apiVersion: argoproj.io/v1alpha1
-kind: AppProject
-metadata:
-  name: consul-demo
-  namespace: argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-spec:
-  description: ArgoCD consul-demo project
-  sourceRepos:
-  - https://github.com/stevegszabo/argocd-example-apps.git
-  destinations:
-  - server: https://192.168.56.201:6443
-    namespace: consul-demo
