--- a/argocd/argo-project-eng.yaml
+++ b/argocd/argo-project-eng.yaml
@@ -13,6 +13,12 @@ spec:
   destinations:
   - server: https://192.168.56.201:6443
     namespace: tools-argocd
+  clusterResourceBlacklist:
+  - group: '*'
+    kind: '*'
+  namespaceResourceWhitelist:
+  - group: 'argoproj.io'
+    kind: 'Application'
 
 ---
 apiVersion: argoproj.io/v1alpha1
