--- a/nginx/helm/ingress-nginx/Chart.yaml
+++ b/nginx/helm/ingress-nginx/Chart.yaml
@@ -1,13 +1,18 @@
 annotations:
   artifacthub.io/changes: |
-    - Disable builtin ssl_session_cache
-    - Print warning only instead of error if no IngressClass permission is available
-    - Bump internal libraries versions
-    - Fix documentations
+    - "[8459](https://github.com/kubernetes/ingress-nginx/pull/8459) Update default allowed CORS headers"
+    - "[8202](https://github.com/kubernetes/ingress-nginx/pull/8202) disable modsecurity on error page"
+    - "[8178](https://github.com/kubernetes/ingress-nginx/pull/8178) Add header Host into mirror annotations"
+    - "[8213](https://github.com/kubernetes/ingress-nginx/pull/8213) feat: always set auth cookie"
+    - "[8548](https://github.com/kubernetes/ingress-nginx/pull/8548) Implement reporting status classes in metrics"
+    - "[8612](https://github.com/kubernetes/ingress-nginx/pull/8612) move so files under /etc/nginx/modules"
+    - "[8624](https://github.com/kubernetes/ingress-nginx/pull/8624) Add patch to remove root and alias directives"
+    - "[8623](https://github.com/kubernetes/ingress-nginx/pull/8623) Improve path rule"
   artifacthub.io/prerelease: "false"
 apiVersion: v2
-appVersion: 1.0.4
-description: Ingress controller for Kubernetes using NGINX as a reverse proxy and load balancer
+appVersion: 1.2.1
+description: Ingress controller for Kubernetes using NGINX as a reverse proxy and
+  load balancer
 home: https://github.com/kubernetes/ingress-nginx
 icon: https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Nginx_logo.svg/500px-Nginx_logo.svg.png
 keywords:
@@ -15,9 +20,11 @@ keywords:
 - nginx
 kubeVersion: '>=1.19.0-0'
 maintainers:
-- name: ChiefAlexander
+- name: rikatz
+- name: strongjz
+- name: tao12345666333
 name: ingress-nginx
 sources:
 - https://github.com/kubernetes/ingress-nginx
 type: application
-version: 4.0.6
+version: 4.1.4
