--- a/nginx/helm/ingress-nginx/values.yaml
+++ b/nginx/helm/ingress-nginx/values.yaml
@@ -461,7 +461,7 @@ controller:
     externalIPs: []
 
     # -- Used by cloud providers to connect the resulting `LoadBalancer` to a pre-existing static IP according to https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer
-    loadBalancerIP: ""
+    loadBalancerIP: "192.168.56.200""
     loadBalancerSourceRanges: []
 
     enableHttp: true
