--- a/argocd/argo-ingress.yaml
+++ b/argocd/argo-ingress.yaml
@@ -21,3 +21,25 @@ spec:
             name: argocd-server
             port:
               number: 443
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: argocd-grpc
+  namespace: tools-argocd
+  annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: ingress-grpc.local
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: argocd-server
+            port:
+              number: 443
