--- a/amazon/cluster-autoscaler-autodiscover.yaml
+++ b/amazon/cluster-autoscaler-autodiscover.yaml
@@ -6,7 +6,7 @@ metadata:
     k8s-addon: cluster-autoscaler.addons.k8s.io
     k8s-app: cluster-autoscaler
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::ACCOUNT:role/AmazonEKSClusterAutoscalerRole
+    eks.amazonaws.com/role-arn: arn:aws:iam::ACCOUNT:role/cluster01
   name: cluster-autoscaler
   namespace: kube-system
 ---
